--- a/css/webflow-style.css
+++ b/css/webflow-style.css
@@ -2076,6 +2076,9 @@ textarea.w-input, textarea.w-select {
 .body {
   color: #000;
   background-color: #000;
+  background-image: url("../images/vintagedust-20-10-.jpg");
+  background-position: 0 0;
+  background-size: auto;
   font-family: Futura PT Light, sans-serif;
 }
 
@@ -2089,16 +2092,21 @@ textarea.w-input, textarea.w-select {
   word-break: normal;
   min-height: 60px;
   margin-top: 0;
-  margin-bottom: -1px;
+  margin-bottom: 0;
   padding-top: 20px;
   padding-bottom: 20px;
-  font-family: Futura PT Light, sans-serif;
-  font-size: 42px;
+  padding-left: 5px;
+  font-family: Futura Bold, Impact, sans-serif;
+  font-size: 36px;
   font-style: normal;
   font-weight: 300;
   line-height: 20px;
   position: relative;
   left: 100px;
+}
+
+.text-block.text-block-2 {
+  font-size: 24px;
 }
 
 .nav-link2 {
@@ -2123,6 +2131,10 @@ textarea.w-input, textarea.w-select {
   border-radius: 0;
   font-size: 16px;
   right: 100px;
+}
+
+.nav-link2.navlink3.navlink4 {
+  font-family: Futura PT Cyrillic Book, Impact, sans-serif;
 }
 
 .navbar {
@@ -2151,6 +2163,10 @@ textarea.w-input, textarea.w-select {
   display: flex;
 }
 
+.left-div.left-div-edit {
+  padding-left: 5px;
+}
+
 .project-description {
   color: #fff;
   margin-bottom: -1px;
@@ -2171,7 +2187,7 @@ textarea.w-input, textarea.w-select {
 .year-container {
   grid-column-gap: 50px;
   grid-row-gap: 50px;
-  background-color: #000;
+  background-color: #0000;
   grid-template: "Area"
   / 1fr 1fr;
   grid-auto-columns: 1fr;
@@ -2180,21 +2196,29 @@ textarea.w-input, textarea.w-select {
   max-width: 740px;
   margin-top: 30px;
   margin-left: auto;
+  margin-right: auto;
+  padding-left: 1px;
   display: grid;
 }
 
 .year-container.year-container-2 {
   background-color: #0000;
   border-radius: 10px;
+  grid-template-columns: 1fr;
   margin-top: 80px;
 }
 
 .button {
-  color: #000;
-  background-color: #ce1f1f;
+  color: #fff;
+  background-color: #6d6d6d;
+  border-radius: 3px;
   margin-top: 15px;
   margin-bottom: 0;
   display: block;
+}
+
+.button.button2 {
+  color: #000;
 }
 
 .div-block {
@@ -2229,10 +2253,246 @@ textarea.w-input, textarea.w-select {
 .form-block {
   background-color: #fff;
   border-radius: 16px;
+  max-width: 736px;
 }
 
 .text-field {
   height: auto;
+}
+
+.footer-light {
+  border-bottom: 1px solid #e4ebf3;
+  padding: 0 30px 40px;
+  position: relative;
+}
+
+.container {
+  width: 100%;
+  max-width: 940px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.footer-wrapper-two {
+  justify-content: space-between;
+  align-items: flex-start;
+  display: flex;
+}
+
+.footer-block-two {
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  display: flex;
+}
+
+.footer-title {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 32px;
+}
+
+.footer-link-two {
+  color: #1a1b1f;
+  margin-top: 20px;
+  text-decoration: none;
+}
+
+.footer-link-two:hover {
+  color: #1a1b1fbf;
+}
+
+.footer-form {
+  width: 315px;
+  max-width: 100%;
+  margin-bottom: 0;
+}
+
+.footer-form-block {
+  justify-content: center;
+  align-items: center;
+  margin-top: 24px;
+  display: flex;
+}
+
+.footer-form-field {
+  border: 1px solid #a6b1bf;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  height: 48px;
+  margin-bottom: 0;
+  padding: 12px 16px;
+  font-size: 14px;
+  line-height: 22px;
+  transition: all .2s;
+}
+
+.footer-form-field:hover, .footer-form-field:focus {
+  border-color: #76879d;
+}
+
+.footer-form-field::placeholder {
+  color: #1a1b1fcc;
+  font-size: 14px;
+  line-height: 22px;
+}
+
+.footer-form-submit {
+  background-color: #1a1b1f;
+  background-image: url("../images/ic-20arrow-20go.svg");
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: auto;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  width: 50px;
+  height: 48px;
+  transition: all .2s;
+}
+
+.footer-form-submit:hover {
+  background-color: #3a4554;
+}
+
+.footer-divider-two {
+  background-color: #e4ebf3;
+  width: 100%;
+  height: 1px;
+  margin-top: 40px;
+  margin-bottom: 0;
+}
+
+.footer-bottom {
+  justify-content: space-between;
+  align-items: center;
+  display: flex;
+}
+
+.footer-copyright {
+  color: #fff;
+}
+
+.footer-social-block-two {
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: 0;
+  margin-left: -12px;
+  display: flex;
+}
+
+.footer-social-link {
+  margin-left: 12px;
+}
+
+.navbar-container {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.section {
+  background-color: #0000;
+}
+
+.image {
+  -webkit-text-fill-color: transparent;
+  background-color: #144f8d00;
+  -webkit-background-clip: text;
+  background-clip: text;
+}
+
+.paragraph {
+  color: #fff;
+  text-align: justify;
+  font-size: 16px;
+}
+
+.utility-page-wrap {
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  max-width: 100%;
+  height: 100vh;
+  max-height: 100%;
+  display: flex;
+}
+
+.utility-page-content {
+  text-align: center;
+  flex-direction: column;
+  width: 260px;
+  display: flex;
+}
+
+.utility-page-form {
+  flex-direction: column;
+  align-items: stretch;
+  display: flex;
+}
+
+.heading {
+  color: #fff;
+  margin-top: 0;
+  font-family: Futura PT Light, sans-serif;
+  font-size: 32px;
+}
+
+.container-2 {
+  max-width: 740px;
+  padding-left: 5px;
+}
+
+.paragraph-2 {
+  color: #fff;
+  font-size: 16px;
+}
+
+.image-2 {
+  border-radius: 0;
+}
+
+@media screen and (max-width: 991px) {
+  .container {
+    max-width: 728px;
+  }
+
+  .footer-wrapper-two {
+    flex-wrap: wrap;
+  }
+
+  .footer-form {
+    width: 100%;
+    margin-top: 40px;
+  }
+
+  .footer-form-container {
+    max-width: 350px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer-light {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .footer-bottom {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
+  .footer-copyright {
+    font-size: 14px;
+    line-height: 20px;
+  }
+
+  .footer-social-block-two {
+    margin-top: 20px;
+  }
+
+  .footer-social-link {
+    margin-left: 20px;
+  }
 }
 
 @media screen and (max-width: 479px) {
@@ -2242,10 +2502,54 @@ textarea.w-input, textarea.w-select {
     left: auto;
   }
 
+  .left-div.left-div-edit {
+    padding-left: 4px;
+  }
+
   .year-container {
     padding-left: 10px;
     padding-right: 16px;
   }
+
+  .button {
+    color: #fff;
+  }
+
+  .button.button2 {
+    color: #000;
+  }
+
+  .container {
+    max-width: none;
+  }
+
+  .footer-wrapper-two {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
+  .footer-block-two {
+    margin-top: 40px;
+  }
+
+  .footer-bottom {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
+  .footer-social-block-two {
+    margin-top: 20px;
+  }
+
+  .container-2 {
+    padding-left: 1px;
+  }
+}
+
+#w-node-_817923d0-a531-ae2d-5240-173f1c592ef2-d88da403, #w-node-cf3964f1-65ba-4be5-bbe1-c1e546d99876-d88da403 {
+  grid-area: Area;
 }
 
 #w-node-_71981c1f-ea49-e0d5-0532-968a7920de2e-d88da403 {
@@ -2262,15 +2566,73 @@ textarea.w-input, textarea.w-select {
   grid-area: Area;
 }
 
-#w-node-af5da179-5e93-da44-70dc-bed48b33a848-d88da403, #w-node-_16181180-c807-492f-fd2f-1feba29daf81-d88da403 {
+#w-node-af5da179-5e93-da44-70dc-bed48b33a848-d88da403, #w-node-_16181180-c807-492f-fd2f-1feba29daf81-d88da403, #w-node-c6c48ba4-0c39-a786-7c23-778ae0855a91-d88da403, #w-node-_3d7ff45a-7559-5e64-7955-3e74ef441339-d88da403, #w-node-_68e3445f-9264-c8cf-de0e-3dac8dbdaea4-d88da403 {
   grid-area: Area;
   place-self: start;
+}
+
+#w-node-_99a3672f-3510-c055-1a8f-6a2156a530c9-d88da403 {
+  grid-area: Area;
+  justify-self: start;
+}
+
+#w-node-_99a3672f-3510-c055-1a8f-6a2156a530cb-d88da403 {
+  grid-area: Area;
 }
 
 @font-face {
   font-family: 'Futura PT Light';
   src: url('https://cdn.prod.website-files.com/67192d0e297fe84fd88da3f6/67196f5334c8755cd74da8ca_FuturaCyrillicLight.ttf') format('truetype');
   font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Futura PT';
+  src: url('https://cdn.prod.website-files.com/67192d0e297fe84fd88da3f6/67196f534dd4151cd989ae0a_FuturaCyrillicExtraBold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Futura PT Cyrillic Book';
+  src: url('https://cdn.prod.website-files.com/67192d0e297fe84fd88da3f6/67196f53dd7eff7eda410f00_FuturaCyrillicBook.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Futura Bold';
+  src: url('https://cdn.prod.website-files.com/67192d0e297fe84fd88da3f6/67196f5397a648cdf8958a37_FuturaCyrillicBold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Futura Light';
+  src: url('https://cdn.prod.website-files.com/67192d0e297fe84fd88da3f6/67196f5334c8755cd74da8ca_FuturaCyrillicLight.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Futura Demi';
+  src: url('https://cdn.prod.website-files.com/67192d0e297fe84fd88da3f6/67196f533f5803544c25fbbc_FuturaCyrillicDemi.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Futura Medium';
+  src: url('https://cdn.prod.website-files.com/67192d0e297fe84fd88da3f6/67196f5310d52610d254e134_FuturaCyrillicMedium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Futura Heavy';
+  src: url('https://cdn.prod.website-files.com/67192d0e297fe84fd88da3f6/67196f53cbc433e9faa39e73_FuturaCyrillicHeavy.ttf') format('truetype');
+  font-weight: 900;
   font-style: normal;
   font-display: swap;
 }
